--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+      <meta name="viewport" content="width=470, maximum-scale=1, user-scalable=no, target-densitydpi=device-dpi">
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
       <link rel="stylesheet" href="app.css">
@@ -53,9 +54,9 @@
           </ul>
   <ul class="tab">
             <h1 class="animated zoomInDown">Erik Shepard-Lewis<br> Web Developer</h1>
-            <h3 class="animated fadeIn">Exploration Controls</h3><br>
+            <h3 class="animated fadeIn">Exploration Controls<br>
           <div class="dropdown">
-          <a href="#" data-activates="slide-out" class="button-collapse"><i class="animated zoomInDown"> <span class="material-icons" style="cursor:pointer;font-size:158px;color:blue">apps</i></span></a><img class="hire"src="images/good.png">
+          <a href="#" data-activates="slide-out" class="button-collapse"><i class="animated fadeIn"> <span class="material-icons" style="cursor:pointer;font-size:600%;color:blue">apps</i></span></a></h3><br><img class="hire"src="images/good.png">
           </div>
           <div id="Contact" class="tabcontent">
           <h3 class="animated rollIn">Contact Info</h3><br>
@@ -199,7 +200,7 @@ $( document ).ready(function() {
   $('.collapsible').collapsible();
 
   $('.button-collapse').sideNav({
-     menuWidth: 700, // Default is 300
+     menuWidth: 480, // Default is 300
      edge: 'left', // Choose the horizontal origin
      closeOnClick: true, // Closes side-nav on <a> clicks, useful for Angular/Meteor
      draggable: true // Choose whether you can drag to open on touch screens
