--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <h1 class="animated zoomInDown">Erik Shepard-Lewis<br> Web Developer</h1>
             <h3 class="animated fadeIn">Exploration Controls<br>
           <div class="dropdown">
-          <a href="#" data-activates="slide-out" class="button-collapse"><i class="animated fadeIn"> <span class="material-icons" style="cursor:pointer;font-size:600%;color:blue">apps</i></span></a></h3><br><img class="hire"src="images/good.png">
+          <a href="#index.html" data-activates="slide-out" class="button-collapse"><i class="animated fadeIn"> <span class="material-icons" style="cursor:pointer;font-size:600%;color:blue">apps</i></span></a></h3><br><img class="hire"src="images/good.png">
           </div>
           <div id="Contact" class="tabcontent">
           <h3 class="animated rollIn">Contact Info</h3><br>
@@ -78,8 +78,8 @@
       </div>
       <div id="About" class="tabcontent">
         <h3>ABOUT ME</h3><br>
-        <img src="images/148476564950119.png"  style="width:300px; height:300px;"> <img src="images/good.png"  style="width:300px; height:300px;">
-        <h2> Hi I'm Erik Shepard-Lewis, a former Rugby League player. I have Completed a full time 9am to 5pm, 3 month immersive training program at General Assembly. Solely focused on building my skills to become full stack Web Developer. I have obtained many skills as listed in the skill section. Every day I'm Continuously trying to learn and master new languages, frameworks and databases. I'm also an extremely fast learner. I love building things, helping people and being creative, making ideas come to life. The possibilities are limitless!  </h2>
+        <img src="images/148476564950119.png"  style="width:300px; height:300px;">
+        <h2>I'm Erik Shepard-Lewis, a full stack web developer. I have gained experience in multiple areas in web development. From back end to front end development. I have completed training at General Assembly Providence WDI emursive program. General Assembly is full time  9am to 5pm, for 3 months. Where you build custom websites and Single Page Apps with responsive design. I have obtained many skills as listed in the skill section. Every day I'm Continuously trying to learn and master new languages, frameworks and databases. I'm also an extremely fast learner who loves building anything. My Strengths are helping others , being creative, Hard working and making ideas come to life. The possibilities are limitless!  </h2>
       </div>
       <div id="Resume" class="tabcontent">
       <h3 class="animated rollIn">Resume</h3><br>
