--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <h1 class="animated zoomInDown">Erik Shepard-Lewis<br> Web Developer</h1>
             <h3 class="animated fadeIn">Exploration Controls<br>
           <div class="dropdown">
-          <a href="#index.html" data-activates="slide-out" class="button-collapse"><i class="animated fadeIn"> <span class="material-icons" style="cursor:pointer;font-size:600%;color:blue">apps</i></span></a></h3><br><img class="hire"src="images/good.png">
+          <a href="#index.html" data-activates="slide-out" class="button-collapse"><i class="animated fadeIn"> <span class="material-icons" style="cursor:pointer;font-size:600%;color:blue">apps</i></span></a><br>
           </div>
           <div id="Contact" class="tabcontent">
           <h3 class="animated rollIn">Contact Info</h3><br>
@@ -71,7 +71,7 @@
           <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FLondellShawndell00%2Fvideos%2F1882938825323674%2F&show_text=0&width=560" width="560" height="315"></iframe>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/1UJyfBKpIEw"allowfullscreen></iframe>
           <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FLondellShawndell00%2Fvideos%2F1787622311521993%2F&show_text=0&width=560" width="560" height="315"></iframe>
-          <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FLondellShawndell00%2Fvideos%2F1742940259323532%2F&show_text=0&width=560" width="560" height="315"></iframe>
+
 </div>
       <div id="AppDemos" class="tabcontent">
 <h3>coming soon</h3>
@@ -168,6 +168,7 @@
           <h3>RESUME</h3>
           </div>
           </div>
+        <br><img class="hire"src="images/good.png"></h3>
           <div class="Fly">
           <img class="Fly" src="images/tumblr_mzpjx8VJTh1qcoscoo1_400.gif">
           </div>
@@ -211,7 +212,6 @@ $( document ).ready(function() {
   // Hide sideNav
   $('.button-collapse').sideNav('hide');
   // Destroy sideNav
-
 
   });
 
