--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                   <a class="collapsible-header">PROJECTS<i class="material-icons">arrow_drop_down</i></a>
                   <div class="collapsible-body">
                     <ul>
+                      <li><a href="javascript:void(0)" class="animated slideInRight" class="tablinks" onclick="openCity(event, 'Client')">Client Websites</a></li>
                       <li><a href="javascript:void(0)" class="animated slideInLeft" class="tablinks" onclick="openCity(event, 'React.JS')">React.JS</a></li>
                       <li><a href="javascript:void(0)" class="animated slideInRight"class="tablinks" onclick="openCity(event, 'RubyonRails')">Ruby on Rails</a></li>
                       <li><a href="javascript:void(0)" class="animated slideInLeft"class="tablinks" onclick="openCity(event, 'Angular.JS')">Angular.Js</a></li>
@@ -53,7 +54,7 @@
             </li>
           </ul>
   <ul class="tab">
-            <h1 class="animated zoomInDown">Erik Shepard-Lewis<br> Web Developer</h1>
+            <h1 class="animated zoomInDown">E.S.L Web Development</h1>
             <h3 class="animated fadeIn">Exploration Controls<br>
           <div class="dropdown">
           <a href="#index.html" data-activates="slide-out" class="button-collapse"><i class="animated fadeIn"> <span class="material-icons" style="cursor:pointer;font-size:600%;color:blue">apps</i></span></a><br>
@@ -120,6 +121,16 @@
            </div>
           </div>
           </div>
+          </div>
+          <div id="Client" class="tabcontent">
+            <div class="tooltip1">
+              <span class="tooltiptext1">Finao Clothing Line.<br> Failure is not an Option! </span>
+              <a href="http://finaoclothing.net" class="animated zoomInLeft"><img class="imgB" src="images/death-star-clipart-1.jpg"><br>FINAO CLOTHING</a>
+            </div>
+              <div class="tooltip">
+                <span class="tooltiptext">Londell Pina's Powerlifting Portfolio </span>
+              <a href="https://arcane-scrubland-17622.herokuapp.com/" class="animated zoomInRight"><img class="imgB" src="images/graphics-star-wars-896705.gif"><br>Londell Pina</a>
+            </div>
           </div>
           <div id="RubyonRails" class="tabcontent">
             <div class="tooltip1">
