--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <a href="#!user"><img class="circle" src="images/18191106_10154767191036713_1243322475_n.jpg"></a>
       <a href="#!name"><span class="white-text name">Erik Shepard-Lewis</span></a>
-      <a href="#!email"><span class="white-text email">Full Stack Web Developer</span></a>
+      <a href="#!email"><span class="white-text email">Web Development World</span></a>
             <li><a href="javascript:void(0)" class="animated slideInLeft"class="tablinks" onclick="openCity(event, 'Resume')">RESUME</a></li>
               <li><a href="javascript:void(0)" class="animated slideInRight"class="tablinks" onclick="openCity(event, 'About')">ABOUT ME</a></li>
               <li><a href="javascript:void(0)" class="animated slideInLeft"class="tablinks" onclick="openCity(event, 'Contact')">CONTACT</a></li>
@@ -54,10 +54,10 @@
             </li>
           </ul>
   <ul class="tab">
-            <h1 class="animated zoomInDown">E.S.L Web Development</h1>
+            <h1 class="animated zoomInDown">E.S.L Web Development World</h1>
             <h3 class="animated fadeIn">Exploration Controls<br>
           <div class="dropdown">
-          <a href="#index.html" data-activates="slide-out" class="button-collapse"><i class="animated fadeIn"> <span class="material-icons" style="cursor:pointer;font-size:600%;color:blue">apps</i></span></a><br>
+          <a href="#index.html" data-activates="slide-out" class="button-collapse"><i class="animated fadeIn"> <span class="material-icons" style="cursor:pointer;font-size:700%;color:#003b00">apps</i></span></a><br>
           </div>
           <div id="Contact" class="tabcontent">
           <h3 class="animated rollIn">Contact Info</h3><br>
@@ -80,8 +80,8 @@
       </div>
       <div id="About" class="tabcontent">
         <h3>ABOUT ME</h3><br>
-        <img src="images/148476564950119.png"  style="width:300px; height:300px;">
-        <h2>I'm Erik Shepard-Lewis, a full stack web developer. I have gained experience in multiple areas in web development. From back end to front end development. I have completed training at General Assembly Providence WDI emursive program. General Assembly is full time  9am to 5pm, for 3 months. Where you build custom websites and Single Page Apps with responsive design. I have obtained many skills as listed in the skill section. Every day I'm Continuously trying to learn and master new languages, frameworks and databases. I'm also an extremely fast learner who loves building anything. My Strengths are helping others , being creative, Hard working and making ideas come to life. The possibilities are limitless!  </h2>
+        <img src="images/20638836_10155074212706713_8862956184257427539_n.jpg"  style="width:300px; height:300px;">
+        <h2> <br><img class="hire"src="images/good.png"></h3>I'm a full stack web developer. Who has gained experience in multiple areas of web development. From back-end to front-end test driven development. I have completed training at General Assembly Providence WDI emursive program. General Assembly is full time 9am to 5pm. Full stack Web Development BootCamp for 3 months. Where you build custom websites and Single Page Apps with responsive web design.
       </div>
       <div id="Resume" class="tabcontent">
       <h3 class="animated rollIn">Resume</h3><br>
@@ -91,7 +91,7 @@
           <div class="skills">
           <div class="dropdown">
           <div class="animated infinite pulse">
-           <button class="dropbtn">Special Abilities</button>
+           <button class="dropbtn">Technology</button>
            </div>
            <div class="dropdown-content5">
 <a><img class="html" src="images/HTML5_Logo_gray-225.png"></a>
@@ -180,16 +180,15 @@
           <h3>RESUME</h3>
           </div>
           </div>
-        <br><img class="hire"src="images/good.png"></h3>
           <div class="Fly">
           <img class="Fly" src="images/tumblr_mzpjx8VJTh1qcoscoo1_400.gif">
           </div>
           <br>
           <div class="animated infinite pulse">
           <div id ="myContainer" class="animated rotateIn">
-              <button  class="sat" onclick="myMove()"><img  class="img2" src="images/newbtn.png" alt=""></button><br>
+              <button  class="sat" onclick="myMove()"><img  class="img2" src="images/green-shoot-button.svg.hi.png" alt=""></button><br>
           <div id ="myAnimation">
-          <img class="Fly" src='images/giffire.gif'></div>
+          <img class="Fly" src='images/green orb.gif'></div>
           </div>
           </div><br><br><br><br><br><br><br><br><br><br>
           <a href="https://www.linkedin.com/in/erik-shepard-lewis">
