--- a/index.html
+++ b/index.html
@@ -1,87 +1,90 @@
 <html>
-    <head>
-      <meta name="viewport" content="width=470, maximum-scale=1, user-scalable=no, target-densitydpi=device-dpi">
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
-      <link rel="stylesheet" href="app.css">
-      <link rel="stylesheet" href="materialize/css/materialize.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-      <script src="app.js"></script>
-      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-      <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
-    </head>
-    <body>
-      <ul id="slide-out" class="side-nav">
-        <li><div class="userView">
-      <div class="background">
-        <img src="images/rubyaaaa.png">
-      </div>
-      <a href="#!user"><img class="circle" src="images/18191106_10154767191036713_1243322475_n.jpg"></a>
-      <a href="#!name"><span class="white-text name">Erik Shepard-Lewis</span></a>
-      <a href="#!email"><span class="white-text email">Web Development World</span></a>
-            <li><a href="javascript:void(0)" class="animated slideInLeft"class="tablinks" onclick="openCity(event, 'Resume')">RESUME</a></li>
-              <li><a href="javascript:void(0)" class="animated slideInRight"class="tablinks" onclick="openCity(event, 'About')">ABOUT ME</a></li>
-              <li><a href="javascript:void(0)" class="animated slideInLeft"class="tablinks" onclick="openCity(event, 'Contact')">CONTACT</a></li>
-            <li> <a href="javascript:void(0)" class="animated slideInRight"class="tablinks" onclick="openCity(event, 'Skills')">SKILLS</a></li>
-            <li class="no-padding">
-              <ul class="collapsible collapsible-accordion">
-                <li>
-                  <a class="collapsible-header">PROJECTS<i class="material-icons">arrow_drop_down</i></a>
-                  <div class="collapsible-body">
-                    <ul>
-                      <li><a href="javascript:void(0)" class="animated slideInRight" class="tablinks" onclick="openCity(event, 'Client')">Client Websites</a></li>
-                      <li><a href="javascript:void(0)" class="animated slideInLeft" class="tablinks" onclick="openCity(event, 'React.JS')">React.JS</a></li>
-                      <li><a href="javascript:void(0)" class="animated slideInRight"class="tablinks" onclick="openCity(event, 'RubyonRails')">Ruby on Rails</a></li>
-                      <li><a href="javascript:void(0)" class="animated slideInLeft"class="tablinks" onclick="openCity(event, 'Angular.JS')">Angular.Js</a></li>
-                    <li> <a href="javascript:void(0)" class="animated slideInRight"class="tablinks" onclick="openCity(event, 'javascripthtml5css3')">javascript/HTML5/CSS3</a></li>
-                    </ul>
-                  </div>
-                </li>
-              </ul>
-            </li>
-            <li class="no-padding">
-              <ul class="collapsible collapsible-accordion">
-                <li>
-                  <a class="collapsible-header">VIDEOS<i class="material-icons">arrow_drop_down</i></a>
-                  <div class="collapsible-body">
-                    <ul>
-                      <li><a href="javascript:void(0)" class="animated slideInLeft" class="tablinks" onclick="openCity(event, 'EditedFilm')">Edited Film</a></li>
-                      <li><a href="javascript:void(0)" class="animated slideInRight"class="tablinks" onclick="openCity(event, 'AppDemos')">App Demo's</a></li>
-                    </ul>
-                  </div>
-                </li>
-              </ul>
+
+<head>
+  <meta name="viewport" content="width=470, maximum-scale=1, user-scalable=no, target-densitydpi=device-dpi">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css" media="screen,projection" />
+  <link rel="stylesheet" href="app.css">
+  <link rel="stylesheet" href="materialize/css/materialize.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  <script src="app.js"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
+</head>
+
+<body>
+  <ul id="slide-out" class="side-nav">
+    <li>
+      <div class="userView">
+        <div class="background">
+          <img src="images/rubyaaaa.png">
+        </div>
+        <a href="#!user"><img class="circle" src="images/18191106_10154767191036713_1243322475_n.jpg"></a>
+        <a href="#!name"><span class="white-text name">Erik Shepard-Lewis</span></a>
+        <a href="#!email"><span class="white-text email">Web Development World</span></a>
+        <li><a href="javascript:void(0)" class="animated slideInLeft" class="tablinks" onclick="openCity(event, 'Resume')">RESUME</a></li>
+        <li><a href="javascript:void(0)" class="animated slideInRight" class="tablinks" onclick="openCity(event, 'About')">ABOUT ME</a></li>
+        <li><a href="javascript:void(0)" class="animated slideInLeft" class="tablinks" onclick="openCity(event, 'Contact')">CONTACT</a></li>
+        <li> <a href="javascript:void(0)" class="animated slideInRight" class="tablinks" onclick="openCity(event, 'Skills')">TECHNOLOGY</a></li>
+        <li class="no-padding">
+          <ul class="collapsible collapsible-accordion">
+            <li>
+              <a class="collapsible-header">PROJECTS<i class="material-icons">arrow_drop_down</i></a>
+              <div class="collapsible-body">
+                <ul>
+                  <li><a href="javascript:void(0)" class="animated slideInRight" class="tablinks" onclick="openCity(event, 'Client')">Client Websites</a></li>
+                  <li><a href="javascript:void(0)" class="animated slideInLeft" class="tablinks" onclick="openCity(event, 'React.JS')">React.JS</a></li>
+                  <li><a href="javascript:void(0)" class="animated slideInRight" class="tablinks" onclick="openCity(event, 'RubyonRails')">Ruby on Rails</a></li>
+                  <li><a href="javascript:void(0)" class="animated slideInLeft" class="tablinks" onclick="openCity(event, 'Angular.JS')">Angular.Js</a></li>
+                  <li> <a href="javascript:void(0)" class="animated slideInRight" class="tablinks" onclick="openCity(event, 'javascripthtml5css3')">javascript/HTML5/CSS3</a></li>
+                </ul>
+              </div>
             </li>
           </ul>
+        </li>
+        <li class="no-padding">
+          <ul class="collapsible collapsible-accordion">
+            <li>
+              <a class="collapsible-header">VIDEOS<i class="material-icons">arrow_drop_down</i></a>
+              <div class="collapsible-body">
+                <ul>
+                  <li><a href="javascript:void(0)" class="animated slideInLeft" class="tablinks" onclick="openCity(event, 'EditedFilm')">Edited Film</a></li>
+                  <li><a href="javascript:void(0)" class="animated slideInRight" class="tablinks" onclick="openCity(event, 'AppDemos')">App Demo's</a></li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </li>
+  </ul>
   <ul class="tab">
-            <h1 class="animated zoomInDown">E.S.L Web Development World</h1>
-            <h3 class="animated fadeIn">Exploration Controls<br>
+    <h1 class="animated zoomInDown">E.S.L Web Development World</h1>
+    <h3 class="animated fadeIn">Exploration Controls<br>
           <div class="dropdown">
           <a href="#index.html" data-activates="slide-out" class="button-collapse"><i class="animated fadeIn"> <span class="material-icons" style="cursor:pointer;font-size:700%;color:#003b00">apps</i></span></a><br>
           </div>
           <div id="Contact" class="tabcontent">
           <h3 class="animated rollIn">Contact Info</h3><br>
-          <a href="https://www.linkedin.com/in/erik-shepard-lewis">
-                  <img class="animated rollIn" src="images/097145-3d-glossy-blue-orb-icon-social-media-logos-linkedin-logo-square2.png" alt="Linked-In"></a>
-                  <h2 class="animated rollIn" >E-MAIL: ESLWEBDEVELOPMENT@AOL.COM</h2>
-          </div>
-        </div>
-        <div id="EditedFilm" class="tabcontent">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/-6lgmW2HS8U" allowfullscreen></iframe>
-          <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FLondellShawndell00%2Fvideos%2F1736900933260798%2F&show_text=0&width=560" width="560" height="315"></iframe>
-          <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FLondellShawndell00%2Fvideos%2F1882938825323674%2F&show_text=0&width=560" width="560" height="315"></iframe>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/1UJyfBKpIEw"allowfullscreen></iframe>
-          <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FLondellShawndell00%2Fvideos%2F1787622311521993%2F&show_text=0&width=560" width="560" height="315"></iframe>
-
-</div>
-      <div id="AppDemos" class="tabcontent">
-<h3>More app demo's Coming soon</h3><br>
-<iframe width="380" height="450" src="https://www.youtube.com/embed/UhMuF4-IAlA" frameborder="0" allowfullscreen></iframe><iframe width="380" height="450" src="https://www.youtube.com/embed/F4vzaA_Qr0U" frameborder="0" allowfullscreen></iframe><br><iframe width="380" height="450" src="https://www.youtube.com/embed/JJpYUYEutOk" frameborder="0" allowfullscreen></iframe>
-      </div>
-      <div id="About" class="tabcontent">
-        <h3>ABOUT ME</h3><br>
-        <img src="images/20638836_10155074212706713_8862956184257427539_n.jpg"  style="width:300px; height:300px;">
-        <h2> <br><img class="hire"src="images/good.png"></h3>I'm a full stack web developer. Who has gained experience in multiple areas of web development. From back-end to front-end test driven development. I have completed training at General Assembly Providence WDI emursive program. General Assembly is full time 9am to 5pm. Full stack Web Development BootCamp for 3 months. Where you build custom websites and Single Page Apps with responsive web design.
+    <a href="https://www.linkedin.com/in/erik-shepard-lewis">
+      <img class="animated rollIn" src="images/097145-3d-glossy-blue-orb-icon-social-media-logos-linkedin-logo-square2.png" alt="Linked-In"></a>
+    <h2 class="animated rollIn">E-MAIL: ESLWEBDEVELOPMENT@AOL.COM</h2>
+    </div>
+    </div>
+    <div id="EditedFilm" class="tabcontent">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/-6lgmW2HS8U" allowfullscreen></iframe>
+      <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FLondellShawndell00%2Fvideos%2F1736900933260798%2F&show_text=0&width=560" width="560" height="315"></iframe>
+      <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FLondellShawndell00%2Fvideos%2F1882938825323674%2F&show_text=0&width=560" width="560" height="315"></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/1UJyfBKpIEw" allowfullscreen></iframe>
+    </div>
+    <div id="AppDemos" class="tabcontent">
+      <h3>More app demo's Coming soon</h3><br>
+      <iframe width="380" height="450" src="https://www.youtube.com/embed/UhMuF4-IAlA" frameborder="0" allowfullscreen></iframe><iframe width="380" height="450" src="https://www.youtube.com/embed/F4vzaA_Qr0U" frameborder="0" allowfullscreen></iframe><br>
+      <iframe
+        width="380" height="450" src="https://www.youtube.com/embed/JJpYUYEutOk" frameborder="0" allowfullscreen></iframe>
+    </div>
+    <div id="About" class="tabcontent">
+      <h3>ABOUT ME</h3><br>
+      <img src="images/20638836_10155074212706713_8862956184257427539_n.jpg" style="width:300px; height:300px;">
+      <h2> <br><img class="hire"src="images/good.png"></h3>I'm a full stack web developer. Who has gained experience in multiple areas of web development. From back-end to front-end test driven development. I have completed training at General Assembly Providence WDI emursive program. General Assembly is full time 9am to 5pm. Full stack Web Development BootCamp for 3 months. Where you build custom websites and Single Page Apps with responsive web design.
       </div>
       <div id="Resume" class="tabcontent">
       <h3 class="animated rollIn">Resume</h3><br>
