--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           <div class="animated infinite pulse">
           <div id ="myContainer" class="animated rotateIn">
               <button  class="sat" onclick="myMove()"><img  class="img2" src="images/green-shoot-button.svg.hi.png" alt=""></button><br>
-          <div id ="myAnimation">
+          <div id ="myAnimation"><br>
           <img class="Fly" src='images/green orb.gif'></div>
           </div>
           </div><br><br><br><br><br><br><br><br><br><br>
