--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <meta name="viewport" content="width=device-width, maximum-scale=1, user-scalable=no">
+  <meta name="viewport" content="width=470, maximum-scale=1, user-scalable=no,">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css" media="screen,projection" />
   <link rel="stylesheet" href="app.css">
@@ -185,12 +185,11 @@
           <div class="Fly">
           <img class="Fly" src="images/tumblr_mzpjx8VJTh1qcoscoo1_400.gif">
           </div>
-          <br>
           <div class="animated infinite pulse">
           <div id ="myContainer" class="animated rotateIn">
               <button  class="sat" onclick="myMove()"><img  class="img2" src="images/green-shoot-button.svg.hi.png" alt=""></button><br>
-          <div id ="myAnimation"><br>
-          <img class="Fly" src='images/green orb.gif'></div>
+          <div id ="myAnimation">
+          <img class="Fly2" src='images/green orb.gif'></div>
           </div>
           </div><br><br><br><br><br><br><br><br><br><br>
           <a href="https://www.linkedin.com/in/erik-shepard-lewis">
