--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
     <a href="https://www.linkedin.com/in/erik-shepard-lewis">
       <img class="animated rollIn" src="images/097145-3d-glossy-blue-orb-icon-social-media-logos-linkedin-logo-square2.png" alt="Linked-In"></a>
     <h2 class="animated rollIn">E-MAIL: ESLWEBDEVELOPMENT@AOL.COM</h2>
+    <h2 class="animated rollIn">Instagram @ ErikshepardL</h2>
+    <h2 class="animated rollIn">Facebook: Erik S-Lewis</h2>
     </div>
     </div>
     <div id="EditedFilm" class="tabcontent">
@@ -77,8 +79,7 @@
     <div id="AppDemos" class="tabcontent">
       <h3>More app demo's Coming soon</h3><br>
       <iframe width="380" height="450" src="https://www.youtube.com/embed/UhMuF4-IAlA" frameborder="0" allowfullscreen></iframe><iframe width="380" height="450" src="https://www.youtube.com/embed/F4vzaA_Qr0U" frameborder="0" allowfullscreen></iframe><br>
-      <iframe
-        width="380" height="450" src="https://www.youtube.com/embed/JJpYUYEutOk" frameborder="0" allowfullscreen></iframe>
+      <iframe width="380" height="450" src="https://www.youtube.com/embed/JJpYUYEutOk" frameborder="0" allowfullscreen></iframe>
     </div>
     <div id="About" class="tabcontent">
       <h3>ABOUT ME</h3><br>
