--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <meta name="viewport" content="width=470, maximum-scale=1, user-scalable=no,">
+  <meta name="viewport" content="width=470, maximum-scale=1, user-scalable=yes,">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css" media="screen,projection" />
   <link rel="stylesheet" href="app.css">
@@ -22,6 +22,7 @@
         <a href="#!user"><img class="circle" src="images/18191106_10154767191036713_1243322475_n.jpg"></a>
         <a href="#!name"><span class="white-text name">Erik Shepard-Lewis</span></a>
         <a href="#!email"><span class="white-text email">Web Development World</span></a>
+        <li><a href="javascript:void(0)" class="animated slideInRight" class="tablinks" onclick="openCity(event, 'About')">PLANS & PRICING</a></li>
         <li><a href="javascript:void(0)" class="animated slideInLeft" class="tablinks" onclick="openCity(event, 'Resume')">RESUME</a></li>
         <li><a href="javascript:void(0)" class="animated slideInRight" class="tablinks" onclick="openCity(event, 'About')">ABOUT ME</a></li>
         <li><a href="javascript:void(0)" class="animated slideInLeft" class="tablinks" onclick="openCity(event, 'Contact')">CONTACT</a></li>
