--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="#!user"><img class="circle" src="images/18191106_10154767191036713_1243322475_n.jpg"></a>
         <a href="#!name"><span class="white-text name">Erik Shepard-Lewis</span></a>
         <a href="#!email"><span class="white-text email">Web Development World</span></a>
-        <li><a href="javascript:void(0)" class="animated slideInRight" class="tablinks" onclick="openCity(event, 'About')">PLANS & PRICING</a></li>
+        <li><a href="javascript:void(0)" class="animated slideInRight" class="tablinks" onclick="openCity(event, 'Plans')">PLANS & PRICING</a></li>
         <li><a href="javascript:void(0)" class="animated slideInLeft" class="tablinks" onclick="openCity(event, 'Resume')">RESUME</a></li>
         <li><a href="javascript:void(0)" class="animated slideInRight" class="tablinks" onclick="openCity(event, 'About')">ABOUT ME</a></li>
         <li><a href="javascript:void(0)" class="animated slideInLeft" class="tablinks" onclick="openCity(event, 'Contact')">CONTACT</a></li>
@@ -87,6 +87,55 @@
       <img src="images/20638836_10155074212706713_8862956184257427539_n.jpg" style="width:300px; height:300px;">
       <h2> <br><img class="hire"src="images/good.png"></h3>I'm a full stack web developer. Who has gained experience in multiple areas of web development. From back-end to front-end test driven development. I have completed training at General Assembly Providence WDI emursive program. General Assembly is full time 9am to 5pm. Full stack Web Development BootCamp for 3 months. Where you build custom websites and Single Page Apps with responsive web design.
       </div>
+      <div id="Plans" class="tabcontent">
+        <h3>PlANS & PRICING</h3><br>
+        <h2 style="text-align:center">Web Design plans and pricing</h2>
+<p style="text-align:center">Resize the browser window to see the effect.</p>
+
+<div class="columns">
+  <ul class="price">
+    <li class="header">E-COMMERCE</li>
+    <li class="grey">$100/mo</li>
+    <li class="grey">$150 setup fee</li>
+    <li>PayPal Fast Check Out & Inventory</li>
+    <li>Mobile Responsive</li>
+    <li>Upgraded features including form, coupons, reviews, slideshows and more</li>
+    <li>DOMAIN & HOSTING</li>
+    <li class="grey"><a href="#" class="button">Sign Up</a></li>
+  </ul>
+</div>
+
+<div class="columns">
+  <ul class="price">
+    <li class="header" style="background-color:#4CAF50">Business Website Package</li>
+    <li class="grey">$60/mo</li>
+    <li class="grey">$150 setup fee</li>
+    <li>Stylish 5 page website design</li>
+    <li>Mobile responsive</li>
+    <li>Upgraded features including form, coupons, reviews, slideshows and more</li>
+    <li>DOMAIN & HOSTING</li>
+    <li class="grey"><a href="#" class="button">Sign Up</a></li>
+  </ul>
+</div>
+
+<div class="columns">
+  <ul class="price">
+    <li class="header">Custom Website Design</li>
+    <li class="grey">Price Varies</li>
+    <li class="grey">based on individual project needs</li>
+    <li>Custom site built from scratch</li>
+    <li>Mobile responsive</li>
+    <li>Weekly or Monthly updates for your site</li>
+    <li>DOMAIN & HOSTING</li>
+    <li class="grey"><a href="#" class="button">Sign Up</a></li>
+  </ul>
+</div>
+
+        <img src="images/20638836_10155074212706713_8862956184257427539_n.jpg" style="width:300px; height:300px;">
+        <h2> <br><img class="hire"src="images/good.png"></h3>Unlike most web firms, My mission is to provide the best online presence possible for my clients. For some clients, that means a simple brochure website with very little ongoing activity, while other projects require a complex development phase followed by constant ongoing programming, design and marketing efforts. Building an online presence is important to just about every type of company in some capacity.
+
+  practicality is big , If it doesn’t make sense for your particular project, then I'm not going to recommend it.  Im available for Video Calls or a sit down to discuss evolving your online presence.
+        </div>
       <div id="Resume" class="tabcontent">
       <h3 class="animated rollIn">Resume</h3><br>
       <a href="https://resume.creddle.io/resume/c32s35c8got"><img class="animated rollIn" src="images/resume-icon-png-5.png"  ></a>
