--- a/index.html
+++ b/index.html
@@ -89,8 +89,10 @@
       </div>
       <div id="Plans" class="tabcontent">
         <h3>PlANS & PRICING</h3><br>
-        <h2 style="text-align:center">Web Design plans and pricing</h2>
-<p style="text-align:center">Resize the browser window to see the effect.</p>
+        <p style="text-align:center">Web Design Plans And Pricing.</p>
+        <h2 style="text-align:center">Unlike most web firms, My mission is to provide the best online presence possible for my clients. For some clients, that means a simple brochure website with very little ongoing activity, while other projects require a complex development phase followed by constant ongoing programming, design and marketing efforts. Building an online presence is important to just about every type of company in some capacity.
+          practicality is big , If it doesn’t make sense for your particular project, then I'm not going to recommend it.  Im available for Video Calls or a sit down to discuss evolving your online presence.</h2>
+
 
 <div class="columns">
   <ul class="price">
@@ -130,11 +132,6 @@
     <li class="grey"><a href="#" class="button">Sign Up</a></li>
   </ul>
 </div>
-
-        <img src="images/20638836_10155074212706713_8862956184257427539_n.jpg" style="width:300px; height:300px;">
-        <h2> <br><img class="hire"src="images/good.png"></h3>Unlike most web firms, My mission is to provide the best online presence possible for my clients. For some clients, that means a simple brochure website with very little ongoing activity, while other projects require a complex development phase followed by constant ongoing programming, design and marketing efforts. Building an online presence is important to just about every type of company in some capacity.
-
-  practicality is big , If it doesn’t make sense for your particular project, then I'm not going to recommend it.  Im available for Video Calls or a sit down to discuss evolving your online presence.
         </div>
       <div id="Resume" class="tabcontent">
       <h3 class="animated rollIn">Resume</h3><br>
