--- a/index.html
+++ b/index.html
@@ -89,11 +89,8 @@
       </div>
       <div id="Plans" class="tabcontent">
         <h3>PlANS & PRICING</h3><br>
-        <p style="text-align:center">Web Design Plans And Pricing.</p>
         <h2 style="text-align:center">Unlike most web firms, My mission is to provide the best online presence possible for my clients. For some clients, that means a simple brochure website with very little ongoing activity, while other projects require a complex development phase followed by constant ongoing programming, design and marketing efforts. Building an online presence is important to just about every type of company in some capacity.
           practicality is big , If it doesn’t make sense for your particular project, then I'm not going to recommend it.  Im available for Video Calls or a sit down to discuss evolving your online presence.</h2>
-
-
 <div class="columns">
   <ul class="price">
     <li class="header">E-COMMERCE</li>
@@ -109,7 +106,7 @@
 
 <div class="columns">
   <ul class="price">
-    <li class="header" style="background-color:#4CAF50">Business Website Package</li>
+    <li class="header" style="background-color:#4CAF50">Business Website </li>
     <li class="grey">$60/mo</li>
     <li class="grey">$150 setup fee</li>
     <li>Stylish 5 page website design</li>
@@ -132,7 +129,8 @@
     <li class="grey"><a href="#" class="button">Sign Up</a></li>
   </ul>
 </div>
-        </div>
+<br><br><br><br><br><br><br><br>
+</div>
       <div id="Resume" class="tabcontent">
       <h3 class="animated rollIn">Resume</h3><br>
       <a href="https://resume.creddle.io/resume/c32s35c8got"><img class="animated rollIn" src="images/resume-icon-png-5.png"  ></a>
