--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
           <div id ="myContainer" class="animated rotateIn">
               <button  class="sat" onclick="myMove()"><img  class="img2" src="images/green-shoot-button.svg.hi.png" alt=""></button><br>
           <div id ="myAnimation">
-          <img class="Fly2" src='images/green orb.gif'></div>
+          <img class="Fly2" src='images/aball.gif'></div>
           </div>
           </div><br><br><br><br><br><br><br><br><br><br>
           <a href="https://www.linkedin.com/in/erik-shepard-lewis">
