--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
           </div>
           <div class="Fly">
           <img class="Fly" src="images/tumblr_mzpjx8VJTh1qcoscoo1_400.gif">
-        </div><br>
+        </div>
           <div class="animated infinite pulse">
           <div id ="myContainer" class="animated rotateIn">
               <button  class="sat" onclick="myMove()"><img  class="img2" src="images/green-shoot-button.svg.hi.png" alt=""></button><br>
